# llm-mafia-game

./: pyproject.toml  requirements.txt
